tests/compile_fail/conflicting_help.stderr
error: `no_short and no_long` is incompatible with `help`.
 --> $DIR/conflicting_help.rs:9:9
  |
9 |     pub value: bool,
  |         ^^^^^
